Release v27.13.0 temporal consistency and legacy cleanup